<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/resultOperations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressOfOperations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="32"
        android:hint="@string/button_name_num_0"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultOperations"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Button
        android:id="@+id/button_wipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_wipe"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_7"
        app:layout_constraintEnd_toStartOf="@id/button_percent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_percent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_9"
        app:layout_constraintEnd_toStartOf="@id/button_split"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_wipe"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button_split"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:padding="10dp"
        android:text="@string/button_name_split"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button_num_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_4"
        app:layout_constraintEnd_toStartOf="@id/button_num_8"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_wipe" />

    <Button
        android:id="@+id/button_num_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_5"
        app:layout_constraintEnd_toStartOf="@id/button_num_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_7"
        app:layout_constraintTop_toBottomOf="@id/button_wipe" />

    <Button
        android:id="@+id/button_num_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_8"
        app:layout_constraintTop_toBottomOf="@id/button_wipe" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:padding="10dp"
        android:text="@string/button_name_multiply"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_9"
        app:layout_constraintTop_toBottomOf="@id/button_split" />

    <Button
        android:id="@+id/button_num_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_4"
        app:layout_constraintBottom_toTopOf="@id/button_num_1"
        app:layout_constraintEnd_toStartOf="@id/button_num_5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_num_7" />

    <Button
        android:id="@+id/button_num_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_2"
        app:layout_constraintEnd_toStartOf="@id/button_num_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_4"
        app:layout_constraintTop_toBottomOf="@id/button_num_8" />

    <Button
        android:id="@+id/button_num_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_5"
        app:layout_constraintTop_toBottomOf="@id/button_num_9" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:padding="10dp"
        android:text="@string/button_name_minus"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_6"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <Button
        android:id="@+id/button_num_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_0"
        app:layout_constraintEnd_toStartOf="@id/button_num_2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_num_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_num_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_num_0"
        app:layout_constraintEnd_toStartOf="@id/button_num_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_1"
        app:layout_constraintTop_toBottomOf="@id/button_num_5" />

    <Button
        android:id="@+id/button_num_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_comma"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_2"
        app:layout_constraintTop_toBottomOf="@id/button_num_6" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:padding="10dp"
        android:text="@string/button_name_plus"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_3"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <Button
        android:id="@+id/button_num_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_num_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_comma"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_num_1" />

    <Button
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"
        android:text="@string/button_name_comma"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_num_0"
        app:layout_constraintTop_toBottomOf="@id/button_num_2" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/button_name_equally"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>